unpackaged/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>This object is used to log student invoices (i.e. deposit, payments, etc).</description>
    <label>Invoice (Legacy)</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>