unpackaged/main/default/objects/Invoice__c/fields/Enrollment_Agreement_Signed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Agreement_Signed_Date_Time__c</fullName>
    <label>Enrollment Agreement Signed Date/Time</label>
    <type>DateTime</type>
</CustomField>