unpackaged/main/default/objects/Invoice__c/fields/Enrollment_Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Agreement_Version__c</fullName>
    <label>Enrollment Agreement Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>