unpackaged/main/default/objects/Invoice__c/fields/Is_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Is_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this invoice is recording a deposit payment.</inlineHelpText>
    <label>Is Deposit</label>
    <type>Checkbox</type>
</CustomField>