unpackaged/main/default/objects/Invoice__c/fields/SF_ID18_Inv__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_Inv__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_Inv</label>
    <type>Text</type>
</CustomField>