unpackaged/main/default/objects/Invoice__c/fields/Stripe_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Email_Address__c</fullName>
    <label>Stripe Email Address</label>
    <type>Email</type>
</CustomField>