unpackaged/main/default/objects/Invoice__c/fields/Tier_1_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Owner__c</fullName>
    <formula>Opportunity__r.Tier_1_Owner__r.FirstName +&quot; &quot;+  Opportunity__r.Tier_1_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 1 Owner</label>
    <type>Text</type>
</CustomField>