unpackaged/main/default/objects/Invoice__c/fields/Tier_2_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Owner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName +&quot; &quot;+  Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 2 Owner</label>
    <type>Text</type>
</CustomField>