unpackaged/main/default/objects/Invoice__c/listViews/All_Invoices_with_columns.listView-meta.xml
<ListView>
    <fullName>All_Invoices_with_columns</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Paid__c</columns>
    <columns>Amount__c</columns>
    <columns>Is_Deposit__c</columns>
    <columns>Location__c</columns>
    <columns>Semester__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Notes__c</columns>
    <columns>Stripe_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices with columns</label>
</ListView>