unpackaged/main/default/objects/Invoice__c/listViews/Spring_2021_Invoices.listView-meta.xml
<ListView>
    <fullName>Spring_2021_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Paid__c</columns>
    <columns>Amount__c</columns>
    <columns>Is_Deposit__c</columns>
    <columns>Location__c</columns>
    <columns>Semester__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Semester__c</field>
        <operation>equals</operation>
        <value>Spring 2021</value>
    </filters>
    <label>Spring 2021 Invoices</label>
</ListView>