unpackaged/main/default/objects/Invoice__c/listViews/VPVSS.listView-meta.xml
<ListView>
    <fullName>VPVSS</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Semester__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Semester__c</field>
        <operation>equals</operation>
        <value>Fall 2021</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Hybrid/Online</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Pura Vida</value>
    </filters>
    <label>VPVSS</label>
</ListView>